# keyboard-drums

./: .gitignore  Cargo.toml  README.md  config.example.toml
.planning/: PLAN.md  REQUIREMENTS.md
src/: audio.rs  config.rs  input.rs  main.rs  ring.rs  samples.rs
systemd/: keyboard-drums.service
udev/: 99-keyboard-drums.rules
